# gordo-dataset

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yaml  pipy.yaml  pypi.yaml
gordo_dataset/: base.py  dataset.py  datasets.py  dimensions.py  exceptions.py  filter_periods.py  filter_rows.py  period.py  sensor_tag.py  utils.py  validators.py
gordo_dataset/data_provider/: assets_config.py  base.py  constants.py  file_type.py  iroc_reader.py  ncs_file_type.py  ncs_lookup.py  ncs_reader.py  partition.py  providers.py  resource_assets_config.py  secrets_loaders.py  storages.py
gordo_dataset/file_system/: adl1.py  adl2.py  azure.py
tests/: conftest.py  test_base.py  test_dataset.py  test_dimensions.py  test_filter_periods.py  test_filter_rows.py  test_period.py  test_sensor_tag.py  utils.py
tests/data_provider/: conftest.py  test_assets_config.py  test_azure_utils.py  test_base.py  test_data_provider_datalake.py  test_data_provider_file_type.py  test_data_provider_influx.py  test_data_provider_iroc.py  test_data_providers.py  test_file_type.py  test_ncs_file_type.py  test_ncs_lookup.py  test_ncs_reader.py  test_partition.py  test_secrets_loaders.py  test_storages.py
tests/data_provider/data/datalake/TRC-325/parquet/2001/: TRC-325_200105.parquet  TRC-325_200106.parquet
tests/data_provider/data/file_type/: all_string_types.parquet  right_dtypes.parquet
tests/file_system/: test_adl1.py  test_adl2.py  test_base.py
