[tool.poetry]
name = "gordo-dataset"
version = "2.3.3"
description = "Gordo datasets and data providers"
authors = ["Equinor ASA <fg_gpl@equinor.com>"]

license = "AGPLv3"
readme = "README.md"
homepage = "https://github.com/equinor/gordo-dataset"
repository = "https://github.com/equinor/gordo-dataset"
keywords = ["gordo"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
]
include = [
    "LICENSE",
    "gordo_dataset/data_provider/resources/assets_config.yaml",
]
packages = [
    { include = "gordo_dataset" }
]

[tool.poetry.dependencies]
python = "^3.7"
azure-datalake-store = "^0.0.51"
pandas = "^1.0.3"
influxdb = "^5.3.0"
cachetools = "^4.1.0"
typing_extensions = "^3.7.4"
pyarrow = "^0.17.1"
azure-storage-file-datalake = "^12.1.2"
azure-identity = "^1.4.0"
marshmallow = "^3.3.0"
PyYAML = "^5.3.1"
scikit-learn = "^0.23.2"
numexpr = "^2.7.1"
xarray = "^0.16.2"

[tool.poetry.dev-dependencies]
pytest = "^6.1"
black = {version = "^19.10b0", allow-prereleases = true}
pytest-cov = "^2.8.1"
docker = "^4.2.0"
mock = "^4.0.2"
pytest-mock = "^3.1.0"
pytest-flakes = "^4.0.0"
pytest-xdist = "^2.1.0"
pytest-mypy = "^0.7.0"
safety = "^1.9.0"
	
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

